# CI-CD

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_0413aa2f94f77d73f4b7472bdf7086c7.html  dir_0413aa2f94f77d73f4b7472bdf7086c7.js  dir_1204229613ffcfc9441b5d0e4edc0a5d.html  dir_1204229613ffcfc9441b5d0e4edc0a5d.js  dir_3bec910ee0781fcc14da1f04e82d9b64.html  dir_3bec910ee0781fcc14da1f04e82d9b64.js  dir_8a4f0ed39dd984ff1f9a7ce5199d8e74.html  dir_8a4f0ed39dd984ff1f9a7ce5199d8e74.js  dir_c6f7e30a8ee4346de040f2830eaffb5b.html  dir_c6f7e30a8ee4346de040f2830eaffb5b.js  dir_fd058e0fd7d1e3f80d982bfc5681bec0.html  dir_fd058e0fd7d1e3f80d982bfc5681bec0.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+47 more)
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  documentation.yml
01_HW_SRC/: CMakeLists.txt
01_HelloWorld/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h
02_IP_Sort/: CMakeLists.txt  IP_Adress.cpp  IP_Adress.h  main.cpp
03_Allocator/: CMakeLists.txt  allocator.h  main.cpp  tempCodeRunnerFile.cpp
04_Nominal_IP/: CMakeLists.txt  Doxyfile.txt  main.cpp
05_Matrix/: CMakeLists.txt  index_collector.h  m_proxy.h  main.cpp  mat_inf.cpp  mat_inf.h  mat_inf.tpp  vector_hash.h
06_bulk_handler/: CMakeLists.txt  bulk_builder.cpp  bulk_builder.h  bulk_builder.hpp  bulk_command.h  bulk_command_builder.h  bulk_command_handler.hpp  bulk_commands_handler.cpp  bulk_commands_handler.h  bulk_commands_handler.hpp  bulk_commands_list.h  bulk_handler.cpp  bulk_handler.hpp  bulk_io.cpp  bulk_io.h  bulk_io.hpp  bulk_logger.h  bulk_logger.hpp  bulk_main.cpp  bulk_main.h  bulk_main.hpp  bulk_runner.cpp  bulk_runner.h  bulk_state_machine.h  bulk_state_machine.hpp  bulk_threads.cpp  bulk_threads.h  commands.hpp  commands.txt  main.cpp
d0/d14/: structare__same__types__coll__graph.map  structare__same__types__coll__graph.md5
d0/d17/: bulk__main_8h__dep__incl.map  bulk__main_8h__dep__incl.md5
d0/d2a/: bulk__logger_8h__incl.map  bulk__logger_8h__incl.md5
d0/d30/: md_README.html
d0/d38/: classmat__inf_1_1iter-members.html
d0/d4f/: 04__Nominal__IP_2main_8cpp__incl.map  04__Nominal__IP_2main_8cpp__incl.md5
d0/da4/: vector__hash_8h__incl.map  vector__hash_8h__incl.md5
d0/ddf/: classbulk__runner__coll__graph.map  classbulk__runner__coll__graph.md5
d0/dea/: bulk__threads_8cpp__incl.map  bulk__threads_8cpp__incl.md5
d0/deb/: classbulk__command-members.html
d1/d2c/: bulk__commands__handler_8h__incl.map  bulk__commands__handler_8h__incl.md5
d1/d51/: bulk__runner_8h__incl.map  bulk__runner_8h__incl.md5
d1/d69/: namespacecmds__list.html
d1/d88/: bulk__io_8h__incl.map  bulk__io_8h__incl.md5
d1/d96/: classbulk__command__custom__coll__graph.map  classbulk__command__custom__coll__graph.md5
d1/da1/: classbulk__command.html  classbulk__command.js
d1/da4/: 06__bulk__handler_2CMakeLists_8txt.html
d1/db7/: bulk__main_8h.html  bulk__main_8h.js  bulk__main_8h_source.html
d1/dca/: classm__proxy_3_011ULL_00_01T_00_01V_00_01N_01_4-members.html
d1/def/: 05__Matrix_2main_8cpp.html  05__Matrix_2main_8cpp.js  05__Matrix_2main_8cpp_source.html
d2/d0e/: structis__container_3_01std_1_1list_3_01Container_00_01Alloc_01_4_01_4.html
d2/d58/: bulk__main_8cpp__incl.map  bulk__main_8cpp__incl.md5
d2/d66/: classm__proxy-members.html
d2/d6b/: classbulk__command__builder__basic__inherit__graph.map
d2/d87/: mat__inf_8h__dep__incl.map  mat__inf_8h__dep__incl.md5
d2/d89/: bulk__commands__handler_8h.html  bulk__commands__handler_8h.js  bulk__commands__handler_8h_source.html
d2/d92/: 01__HelloWorld_2main_8cpp.html  01__HelloWorld_2main_8cpp.js  01__HelloWorld_2main_8cpp_source.html
d2/db8/: classm__proxy_3_011ULL_00_01T_00_01V_00_01N_01_4__coll__graph.map  classm__proxy_3_011ULL_00_01T_00_01V_00_01N_01_4__coll__graph.md5
d2/dcd/: structis__container_3_01std_1_1vector_3_01Container_00_01Alloc_01_4_01_4.html
d3/d10/: classbulk__threads.html  classbulk__threads.js
d3/d2b/: structvector__hash-members.html
d3/d52/: structis__tuple_3_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.map
d3/d86/: bulk__io_8h__dep__incl.map  bulk__io_8h__dep__incl.md5
d3/d90/: bulk__command__builder_8h__dep__incl.map  bulk__command__builder_8h__dep__incl.md5
d3/dac/: 04__Nominal__IP_2CMakeLists_8txt.html
d3/db1/: classbulk__main.html  classbulk__main.js
d3/dd7/: classbulk__command__custom-members.html
d3/ddb/: 02__IP__Sort_2CMakeLists_8txt.html
d3/def/: classbulk__commands__handler-members.html
d4/d10/: bulk__threads_8cpp.html  bulk__threads_8cpp_source.html
d4/d13/: classbulk__command__inherit__graph.map  classbulk__command__inherit__graph.md5
d4/d1b/: structare__same__types.html
d4/d1d/: classbulk__builder-members.html
d4/d48/: vector__hash_8h__dep__incl.map  vector__hash_8h__dep__incl.md5
d4/d66/: classbulk__commands__handler__coll__graph.map  classbulk__commands__handler__coll__graph.md5
d4/d68/: classbulk__command__builder__basic__coll__graph.md5
d4/d86/: classmat__inf-members.html
d4/d98/: structis__container.html
d4/dd1/: m__proxy_8h.html  m__proxy_8h.js  m__proxy_8h_source.html
d4/ddd/: bulk__main_8cpp.html  bulk__main_8cpp_source.html
d4/df5/: classbulk__threads-members.html
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+41 more)
(+203 files in other folders)
